reset v1 deploy attempt 2